content/terraform-enterprise/1.1.x/docs/enterprise/workspaces/policy-enforcement/prewritten-library.mdx
---
page_title: Pre-written policy library
description: >-
  HashiCorp authors and maintains a library of pre-written Sentinel policies
  that enforce CIS and other compliance standards. Learn about the available
  pre-written policies.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-15T15:59:51Z
last_modified: 2025-10-15T15:59:51Z
# END AUTO GENERATED METADATA
---

# Pre-written policy library reference

This topic provides reference information about the Sentinel policy libraries that HashiCorp authors and maintains. For instructions on how to run the policy libraries, refer to [Run pre-written Sentinel policies ](/terraform/enterprise/policy-enforcement/prewritten-sentinel).

## AWS policies

HashiCorp publishes pre-written policies for the following AWS standards. 

### Center for Internet Security (CIS)

The Center for Internet Security (CIS) is a non-profit organization that publishes prescriptive guidance for configuring secure cloud services. Refer to the [CIS website](https://www.cisecurity.org) for additional information.  

CIS refers to their standards as benchmarks. HashiCorp publishes pre-written policies that support the following CIS benchmarks for AWS:

-   Amazon Web Services Foundations version 1.2. Refer to the [AWS documentation](https://docs.aws.amazon.com/securityhub/latest/userguide/cis-aws-foundations-benchmark.html#cis1v2-standard) for additional information about this version.
-   Amazon Web Services Foundations version 1.4. Refer to the [AWS documentation](https://docs.aws.amazon.com/securityhub/latest/userguide/cis-aws-foundations-benchmark.html#cis1v4-standard) for additional information about this version.
-   Amazon Web Services Foundations version 3.0. Refer to the [AWS documentation](https://docs.aws.amazon.com/securityhub/latest/userguide/cis-aws-foundations-benchmark.html#cis3v0-standard) for additional information about this version.

Refer to the [CIS policy set for AWS GitHub repository](https://github.com/hashicorp/policy-library-CIS-Policy-Set-for-AWS-Terraform) for details about these policies.

### Foundational Security Best Practices (FSBP)

The Foundational Security Best Practices (FSBP) standard enforces security best practices on AWS resources. HashiCorp publishes pre-written policies that support the following AWS FSBP standards:

-   AWS Foundational Security Best Practices v1.0.0. Refer to the [AWS documentation](https://docs.aws.amazon.com/securityhub/latest/userguide/fsbp-standard.html) for additional information.

Refer to the [AWS FSBP policy set repository](https://github.com/hashicorp/policy-library-FSBP-Policy-Set-for-AWS-Terraform/) for details about these policies. 

### NIST SP 800-53 Revision 5

NIST Special Publication 800-53 Revision 5 (NIST SP 800-53 Rev. 5) framework provides a catalog of security and privacy requirements for protecting the confidentiality, integrity, and availability of information systems and critical resources. Refer to the [AWS NIST SP 800-53 documentation](https://docs.aws.amazon.com/securityhub/latest/userguide/standards-reference-nist-800-53.html) information about the AWS implementation.

Refer to [Pre-written Sentinel Policies for AWS NIST Foundations Benchmarking repository](https://github.com/hashicorp/policy-library-NIST-Policy-Set-for-AWS-Terraform) for details about these policies.
